Added JIB and instructions on how to build and push image